[package]
name = "psx-shm"
version = "0.2.1"
edition = "2021"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "POSIX shared memory wrapper."
readme = "README.md"
keywords = ["posix", "shared", "memory", "ipc", "shm"]
license = "MPL-2.0"
repository = "https://github.com/itsjunetime/psx-shm"
documentation = "https://docs.rs/psx-shm/"

[dependencies]
# need shm feature for the shm stuff, need fs feature for the type of one of the arguments for shm::open
rustix = { version = "1", default-features = false, features = ["shm", "fs"] }
memmap2 = "0.9"

[lints.clippy]
disallowed_methods = "deny"
